# hello-jni

./: local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  key.c
app/src/main/java/com/swt/set/key/: KeyJni.kt  SwtKeyUtils.kt
app/src/main/res/layout/: activity_hello_jni.xml
